--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
 
   <body>
-    <div style="height: 500px;">dafsdf</div>
-    <div style="height: 500px;">dsaf</div>
-    <div style="height: 500px;">dsadsfadff</div>
+    <div style="height: 500px;">Go Down</div>
+    <div style="height: 500px;">Go Down</div>
+    <div style="height: 500px;">Go Down</div>
     <div id="funfactId">
       <div class="funcfact">
         <h4 class="funcfact__count js-counter" data-count="1200">0</h4>
